이미지 피커 작성 완료

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -8,4 +8,5 @@
     <string name="pride">자부심</string>
     <string name="serenity">고요함</string>
     <string name="awe">경외심</string>
+    <string name="every_image">모든 이미지</string>
 </resources>
