--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="pride">pride</string>
     <string name="serenity">serenity</string>
     <string name="awe">awe</string>
+    <string name="every_image">Every Image</string>
 </resources>
