--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -9,4 +9,5 @@
     <string name="serenity">고요함</string>
     <string name="awe">경외심</string>
     <string name="every_image">모든 이미지</string>
+    <string name="attach">첨부</string>
 </resources>
