--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="serenity">serenity</string>
     <string name="awe">awe</string>
     <string name="every_image">Every Image</string>
+    <string name="attach">Attach</string>
 </resources>
