--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -10,4 +10,5 @@
     <string name="awe">경외심</string>
     <string name="every_image">모든 이미지</string>
     <string name="attach">첨부</string>
+    <string name="max_image_count_error">최대 %d 개 이미지만 첨부할 수 있습니다.</string>
 </resources>
