--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="awe">awe</string>
     <string name="every_image">Every Image</string>
     <string name="attach">Attach</string>
+    <string name="max_image_count_error">최대 %d 개 이미지만 첨부할 수 있습니다.</string>
 </resources>
