--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -11,4 +11,7 @@
     <string name="every_image">모든 이미지</string>
     <string name="attach">첨부</string>
     <string name="max_image_count_error">최대 %d 개 이미지만 첨부할 수 있습니다.</string>
+    <string name="request_permission">권한 요청</string>
+    <string name="media_image_permission_rationale">미디어 파일 권한이 없으면 사진을 첨부할 수 없습니다.\n권한 요청 메시지에서 권한을 수락하거나, 앱 설정에서 미디어 이미지 권한을 허용해주세요</string>
+    <string name="media_image_permission_description">사진을 첨부하기 위해서는 미디어 파일 권한이 필요합니다.</string>
 </resources>
