--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="awe">awe</string>
     <string name="every_image">Every Image</string>
     <string name="attach">Attach</string>
-    <string name="max_image_count_error">최대 %d 개 이미지만 첨부할 수 있습니다.</string>
+    <string name="max_image_count_error">You can only attach up to %d images.</string>
+    <string name="request_permission">Request Permission</string>
+    <string name="media_image_permission_rationale">You cannot attach photos without media file permission.\nPlease accept the permission in the permission request message or allow the media image permission in the app settings.</string>
+    <string name="media_image_permission_description">Media file permission is required to attach a photo.</string>
 </resources>
